--- a/app/views/static_pages/privacy_policy.html.erb
+++ b/app/views/static_pages/privacy_policy.html.erb
@@ -1,2 +1,5 @@
 <h1>Privacy Policy Page</h1>
-<%= link_to "Home", root_path%>
+<%= link_to root_path, class: "btn btn-lg btn-warning" do %>
+    <i class="far fa-address-book"></i>
+    privacy policy
+<% end %>
