created the course scaffold

--- a/app/views/static_pages/index_page.html.haml
+++ b/app/views/static_pages/index_page.html.haml
@@ -28,7 +28,7 @@
         %button.btn.btn-outline-success{:type => "submit"} Search
 %h1 Home Page
 = link_to "privacy policy", privacy_policy_path
-%h1
-  hello world
-  this is khalil frough
-  my title is bullshit
+
+= link_to courses_path, class: 'btn btn-success' do
+  .fa.fa-book
+  Courses 
